<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.example.themoviedbandfirebase.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" >
        <action
            android:id="@+id/action_navigation_movies_to_movieDetailsActivity"
            app:destination="@id/movieDetailsActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_position"
        android:name="com.example.themoviedbandfirebase.ui.position.PositionFragment"
        android:label="@string/title_position"
        tools:layout="@layout/fragment_position" >
        <action
            android:id="@+id/action_navigation_position_to_detailsPositionActivity"
            app:destination="@id/detailsPositionActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_images"
        android:name="com.example.themoviedbandfirebase.ui.images.ImagesFragment"
        android:label="@string/title_images"
        tools:layout="@layout/fragment_images" >
        <action
            android:id="@+id/action_navigation_images_to_addImagesActivity"
            app:destination="@id/addImagesActivity" />
    </fragment>

    <activity
        android:id="@+id/movieDetailsActivity"
        android:name="com.example.themoviedbandfirebase.ui.movies.detailsMovie.MovieDetailsActivity"
        android:label="@string/title_details"
        tools:layout="@layout/activity_movie_details">
        <argument
            android:name="movie"
            app:argType="com.example.themoviedbandfirebase.models.MostPopularResult" />
    </activity>
    <activity
        android:id="@+id/detailsPositionActivity"
        android:name="com.example.themoviedbandfirebase.ui.position.detailsPosition.DetailsPositionActivity"
        android:label="@string/details_position"
        tools:layout="@layout/activity_details_position">
        <argument
            android:name="mylocation"
            app:argType="com.example.themoviedbandfirebase.models.MyLocation" />
    </activity>

    <activity
        android:id="@+id/addImagesActivity"
        android:name="com.example.themoviedbandfirebase.ui.images.addImages.AddImagesActivity"
        android:label="activity_add_images"
        tools:layout="@layout/activity_add_images" />

</navigation>